// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it returns the proper shape 1`] = `
<i
  talonProps={
    Object {
      "errorMessage": "",
      "handleAddToWishlistSuccess": [MockFunction handleAddToWishlistSuccess],
      "handleEditItem": [Function],
      "handleRemoveFromCart": [Function],
      "handleSaveForLater": [Function],
      "handleUpdateItemQuantity": [Function],
      "handleWishlistDialogClose": [MockFunction handleWishlistDialogClose],
      "isEditable": false,
      "isMultipleWishlistsEnabled": false,
      "isProductUpdating": true,
      "isWishlistDialogOpen": false,
      "loginToastProps": null,
      "product": Object {
        "currency": "USD",
        "image": "test.webp",
        "name": "unit test",
        "options": Array [],
        "quantity": 7,
        "stockStatus": undefined,
        "unitPrice": 99,
        "urlKey": undefined,
        "urlSuffix": undefined,
      },
    }
  }
/>
`;

exports[`it returns the proper shape when use variant image is configured 1`] = `
<i
  talonProps={
    Object {
      "errorMessage": "",
      "handleAddToWishlistSuccess": [MockFunction handleAddToWishlistSuccess],
      "handleEditItem": [Function],
      "handleRemoveFromCart": [Function],
      "handleSaveForLater": [Function],
      "handleUpdateItemQuantity": [Function],
      "handleWishlistDialogClose": [MockFunction handleWishlistDialogClose],
      "isEditable": true,
      "isMultipleWishlistsEnabled": false,
      "isProductUpdating": true,
      "isWishlistDialogOpen": false,
      "loginToastProps": null,
      "product": Object {
        "currency": "USD",
        "image": "variant1.webp",
        "name": "unit test",
        "options": Array [
          Object {
            "id": 22,
            "option_label": "Color",
            "value_id": 2,
            "value_label": "red",
          },
        ],
        "quantity": 7,
        "stockStatus": undefined,
        "unitPrice": 99,
        "urlKey": undefined,
        "urlSuffix": undefined,
      },
    }
  }
/>
`;

exports[`testing save for later feature it should show login toast if user is not logged in 1`] = `
Object {
  "message": "Please sign-in to your Account to save items for later.",
  "timeout": 5000,
  "type": "info",
}
`;
